[gd_scene load_steps=109 format=2]

[ext_resource path="res://scene/player/player.gd" type="Script" id=1]
[ext_resource path="res://scene/player/swing.gd" type="Script" id=2]
[ext_resource path="res://assets/player/cac/hit 0.png" type="Texture" id=3]
[ext_resource path="res://assets/player/cac/hit 1.png" type="Texture" id=4]
[ext_resource path="res://assets/player/cac/hit 2.png" type="Texture" id=5]
[ext_resource path="res://assets/player/cac/hit 3.png" type="Texture" id=6]
[ext_resource path="res://assets/player/cac/hit 4.png" type="Texture" id=7]
[ext_resource path="res://assets/player/cac/hit 5.png" type="Texture" id=8]
[ext_resource path="res://assets/player/cac/hit 6.png" type="Texture" id=9]
[ext_resource path="res://assets/player/cac/hit 7.png" type="Texture" id=10]
[ext_resource path="res://assets/player/cac/hit 8.png" type="Texture" id=11]
[ext_resource path="res://assets/player/cac/hit 9.png" type="Texture" id=12]
[ext_resource path="res://assets/player/cac/hit 10.png" type="Texture" id=13]
[ext_resource path="res://shaders/hologram_shadermaterial.tres" type="Material" id=14]
[ext_resource path="res://assets/player/Idle/Idle__000.png" type="Texture" id=15]
[ext_resource path="res://assets/player/Idle/Idle__001.png" type="Texture" id=16]
[ext_resource path="res://assets/player/Idle/Idle__002.png" type="Texture" id=17]
[ext_resource path="res://assets/player/Idle/Idle__003.png" type="Texture" id=18]
[ext_resource path="res://assets/player/Idle/Idle__004.png" type="Texture" id=19]
[ext_resource path="res://assets/player/Idle/Idle__005.png" type="Texture" id=20]
[ext_resource path="res://assets/player/Idle/Idle__006.png" type="Texture" id=21]
[ext_resource path="res://assets/player/Idle/Idle__007.png" type="Texture" id=22]
[ext_resource path="res://assets/player/Idle/Idle__008.png" type="Texture" id=23]
[ext_resource path="res://assets/player/Idle/Idle__009.png" type="Texture" id=24]
[ext_resource path="res://assets/player/Walk/Walk__000.png" type="Texture" id=25]
[ext_resource path="res://assets/player/Walk/Walk__001.png" type="Texture" id=26]
[ext_resource path="res://assets/player/Walk/Walk__002.png" type="Texture" id=27]
[ext_resource path="res://assets/player/Walk/Walk__003.png" type="Texture" id=28]
[ext_resource path="res://assets/player/Walk/Walk__004.png" type="Texture" id=29]
[ext_resource path="res://assets/player/Walk/Walk__005.png" type="Texture" id=30]
[ext_resource path="res://assets/player/Walk/Walk__006.png" type="Texture" id=31]
[ext_resource path="res://assets/player/Walk/Walk__007.png" type="Texture" id=32]
[ext_resource path="res://assets/player/Walk/Walk__008.png" type="Texture" id=33]
[ext_resource path="res://assets/player/Walk/Walk__009.png" type="Texture" id=34]
[ext_resource path="res://assets/player/dead/Dead__000.png" type="Texture" id=35]
[ext_resource path="res://assets/player/dead/Dead__001.png" type="Texture" id=36]
[ext_resource path="res://assets/player/dead/Dead__002.png" type="Texture" id=37]
[ext_resource path="res://assets/player/dead/Dead__003.png" type="Texture" id=38]
[ext_resource path="res://assets/player/dead/Dead__004.png" type="Texture" id=39]
[ext_resource path="res://assets/player/dead/Dead__005.png" type="Texture" id=40]
[ext_resource path="res://assets/player/dead/Dead__006.png" type="Texture" id=41]
[ext_resource path="res://assets/player/dead/Dead__007.png" type="Texture" id=42]
[ext_resource path="res://assets/player/dead/Dead__008.png" type="Texture" id=43]
[ext_resource path="res://assets/player/dead/Dead__009.png" type="Texture" id=44]
[ext_resource path="res://assets/player/Shoot/Shoot__000.png" type="Texture" id=45]
[ext_resource path="res://assets/player/Shoot/Shoot__001.png" type="Texture" id=46]
[ext_resource path="res://assets/player/Shoot/Shoot__002.png" type="Texture" id=47]
[ext_resource path="res://assets/player/Shoot/Shoot__003.png" type="Texture" id=48]
[ext_resource path="res://assets/player/Shoot/Shoot__004.png" type="Texture" id=49]
[ext_resource path="res://assets/player/Shoot/Shoot__005.png" type="Texture" id=50]
[ext_resource path="res://assets/player/Shoot/Shoot__006.png" type="Texture" id=51]
[ext_resource path="res://assets/player/Shoot/Shoot__007.png" type="Texture" id=52]
[ext_resource path="res://assets/player/Shoot/Shoot__008.png" type="Texture" id=53]
[ext_resource path="res://assets/player/Shoot/Shoot__009.png" type="Texture" id=54]
[ext_resource path="res://assets/player/Walk/Walk_Shoot__000.png" type="Texture" id=55]
[ext_resource path="res://assets/player/Walk/Walk_Shoot__001.png" type="Texture" id=56]
[ext_resource path="res://assets/player/Walk/Walk_Shoot__002.png" type="Texture" id=57]
[ext_resource path="res://assets/player/Walk/Walk_Shoot__003.png" type="Texture" id=58]
[ext_resource path="res://assets/player/Walk/Walk_Shoot__004.png" type="Texture" id=59]
[ext_resource path="res://assets/player/Walk/Walk_Shoot__005.png" type="Texture" id=60]
[ext_resource path="res://assets/player/Walk/Walk_Shoot__006.png" type="Texture" id=61]
[ext_resource path="res://assets/player/Walk/Walk_Shoot__007.png" type="Texture" id=62]
[ext_resource path="res://assets/player/Walk/Walk_Shoot__008.png" type="Texture" id=63]
[ext_resource path="res://assets/player/Walk/Walk_Shoot__009.png" type="Texture" id=64]
[ext_resource path="res://assets/player/Melee/Melee__000.png" type="Texture" id=65]
[ext_resource path="res://assets/player/Melee/Melee__001.png" type="Texture" id=66]
[ext_resource path="res://assets/player/Melee/Melee__002.png" type="Texture" id=67]
[ext_resource path="res://assets/player/Melee/Melee__003.png" type="Texture" id=68]
[ext_resource path="res://assets/player/Melee/Melee__004.png" type="Texture" id=69]
[ext_resource path="res://assets/player/Melee/Melee__005.png" type="Texture" id=70]
[ext_resource path="res://assets/player/Melee/Melee__006.png" type="Texture" id=71]
[ext_resource path="res://assets/player/Melee/Melee__007.png" type="Texture" id=72]
[ext_resource path="res://assets/player/Melee/Melee__008.png" type="Texture" id=73]
[ext_resource path="res://assets/player/Melee/Melee__009.png" type="Texture" id=74]
[ext_resource path="res://assets/player/Run/Run_Shoot__000.png" type="Texture" id=75]
[ext_resource path="res://assets/player/Run/Run_Shoot__001.png" type="Texture" id=76]
[ext_resource path="res://assets/player/Run/Run_Shoot__002.png" type="Texture" id=77]
[ext_resource path="res://assets/player/Run/Run_Shoot__003.png" type="Texture" id=78]
[ext_resource path="res://assets/player/Run/Run_Shoot__004.png" type="Texture" id=79]
[ext_resource path="res://assets/player/Run/Run_Shoot__005.png" type="Texture" id=80]
[ext_resource path="res://assets/player/Run/Run_Shoot__006.png" type="Texture" id=81]
[ext_resource path="res://assets/player/Run/Run_Shoot__007.png" type="Texture" id=82]
[ext_resource path="res://assets/player/Run/Run_Shoot__008.png" type="Texture" id=83]
[ext_resource path="res://assets/player/Run/Run_Shoot__009.png" type="Texture" id=84]
[ext_resource path="res://assets/player/Idle/Idle_Aim__000.png" type="Texture" id=85]
[ext_resource path="res://assets/player/Idle/Idle_Aim__001.png" type="Texture" id=86]
[ext_resource path="res://assets/player/Idle/Idle_Aim__002.png" type="Texture" id=87]
[ext_resource path="res://assets/player/Idle/Idle_Aim__003.png" type="Texture" id=88]
[ext_resource path="res://assets/player/Idle/Idle_Aim__004.png" type="Texture" id=89]
[ext_resource path="res://assets/player/Idle/Idle_Aim__005.png" type="Texture" id=90]
[ext_resource path="res://assets/player/Idle/Idle_Aim__006.png" type="Texture" id=91]
[ext_resource path="res://assets/player/Idle/Idle_Aim__007.png" type="Texture" id=92]
[ext_resource path="res://assets/player/Idle/Idle_Aim__008.png" type="Texture" id=93]
[ext_resource path="res://assets/player/Idle/Idle_Aim__009.png" type="Texture" id=94]
[ext_resource path="res://assets/player/Run/Run__000.png" type="Texture" id=95]
[ext_resource path="res://assets/player/Run/Run__001.png" type="Texture" id=96]
[ext_resource path="res://assets/player/Run/Run__002.png" type="Texture" id=97]
[ext_resource path="res://assets/player/Run/Run__003.png" type="Texture" id=98]
[ext_resource path="res://assets/player/Run/Run__004.png" type="Texture" id=99]
[ext_resource path="res://assets/player/Run/Run__005.png" type="Texture" id=100]
[ext_resource path="res://assets/player/Run/Run__006.png" type="Texture" id=101]
[ext_resource path="res://assets/player/Run/Run__007.png" type="Texture" id=102]
[ext_resource path="res://assets/player/Run/Run__008.png" type="Texture" id=103]
[ext_resource path="res://assets/player/Run/Run__009.png" type="Texture" id=104]
[ext_resource path="res://assets/hud/font.tres" type="DynamicFont" id=105]
[ext_resource path="res://scene/player/Label.gd" type="Script" id=106]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 11 ), ExtResource( 12 ), ExtResource( 13 ), ExtResource( 3 ) ],
"loop": true,
"name": "swing",
"speed": 24.0
} ]

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 15 ), ExtResource( 16 ), ExtResource( 17 ), ExtResource( 18 ), ExtResource( 19 ), ExtResource( 20 ), ExtResource( 21 ), ExtResource( 22 ), ExtResource( 23 ), ExtResource( 24 ) ],
"loop": true,
"name": "idle",
"speed": 11.0
}, {
"frames": [ ExtResource( 25 ), ExtResource( 26 ), ExtResource( 27 ), ExtResource( 28 ), ExtResource( 29 ), ExtResource( 30 ), ExtResource( 31 ), ExtResource( 32 ), ExtResource( 33 ), ExtResource( 34 ) ],
"loop": true,
"name": "walk",
"speed": 11.0
}, {
"frames": [ ExtResource( 35 ), ExtResource( 36 ), ExtResource( 37 ), ExtResource( 38 ), ExtResource( 39 ), ExtResource( 40 ), ExtResource( 41 ), ExtResource( 42 ), ExtResource( 43 ), ExtResource( 44 ) ],
"loop": false,
"name": "dead",
"speed": 11.0
}, {
"frames": [ ExtResource( 45 ), ExtResource( 46 ), ExtResource( 47 ), ExtResource( 48 ), ExtResource( 49 ), ExtResource( 50 ), ExtResource( 51 ), ExtResource( 52 ), ExtResource( 53 ), ExtResource( 54 ) ],
"loop": true,
"name": "shoot",
"speed": 11.0
}, {
"frames": [ ExtResource( 55 ), ExtResource( 56 ), ExtResource( 57 ), ExtResource( 58 ), ExtResource( 59 ), ExtResource( 60 ), ExtResource( 61 ), ExtResource( 62 ), ExtResource( 63 ), ExtResource( 64 ) ],
"loop": true,
"name": "walk_shoot",
"speed": 11.0
}, {
"frames": [ ExtResource( 65 ), ExtResource( 66 ), ExtResource( 67 ), ExtResource( 68 ), ExtResource( 69 ), ExtResource( 70 ), ExtResource( 71 ), ExtResource( 72 ), ExtResource( 73 ), ExtResource( 74 ) ],
"loop": true,
"name": "melee",
"speed": 11.0
}, {
"frames": [ ExtResource( 75 ), ExtResource( 76 ), ExtResource( 77 ), ExtResource( 78 ), ExtResource( 79 ), ExtResource( 80 ), ExtResource( 81 ), ExtResource( 82 ), ExtResource( 83 ), ExtResource( 84 ) ],
"loop": true,
"name": "run_shoot",
"speed": 11.0
}, {
"frames": [ ExtResource( 85 ), ExtResource( 86 ), ExtResource( 87 ), ExtResource( 88 ), ExtResource( 89 ), ExtResource( 90 ), ExtResource( 91 ), ExtResource( 92 ), ExtResource( 93 ), ExtResource( 94 ) ],
"loop": true,
"name": "idle_aim",
"speed": 11.0
}, {
"frames": [ ExtResource( 95 ), ExtResource( 96 ), ExtResource( 97 ), ExtResource( 98 ), ExtResource( 99 ), ExtResource( 100 ), ExtResource( 101 ), ExtResource( 102 ), ExtResource( 103 ), ExtResource( 104 ) ],
"loop": true,
"name": "run",
"speed": 11.0
} ]

[node name="Player" type="KinematicBody2D" groups=[
"player",
]]
script = ExtResource( 1 )
rotSpeed = 10.0
speed = 500.0
shootSpeed = 12.0

[node name="swing" type="Node2D" parent="."]
position = Vector2( -1.22772, 4.91098 )
script = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="swing"]
modulate = Color( 0, 0.858824, 1, 1 )
position = Vector2( 338.54, 0 )
rotation = 0.374514
scale = Vector2( -5.58798, 5.58798 )
frames = SubResource( 1 )
animation = "swing"
__meta__ = {
"_edit_lock_": true
}

[node name="Area2D" type="Area2D" parent="swing/AnimatedSprite"]
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="swing/AnimatedSprite/Area2D"]
position = Vector2( 0.813942, 0.319931 )
build_mode = 1
polygon = PoolVector2Array( 61.3927, -14.5979, 44.353, -35.7128, 9.95474, -27.0912, 1.1035, -24.6754, -10.4625, -18.7651, -19.7772, -7.93513, -24.5939, 2.09306, -27.0441, 14.6545, -1.17112, 53.4298, 39.2409, 56.2079 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
position = Vector2( -35, 0 )
scale = Vector2( 3.72697, 7.40029 )
build_mode = 1
polygon = PoolVector2Array( 12.1977, 22.9503, 6.78638, 32.0631, -32, 32, -36.1664, 19.2882, -40.5631, 5.32105, -30.8324, -5.83842, -45.6563, -25.0833, -28.798, -19.136, -24.1599, -27.9787, -4.88188, -33.3441, 11.6904, -33.259, 26.2335, -27.3825, 31.814, -19.6325, 30.6302, -8.04994, 24.2042, -0.981205, 21.3294, 17.5849 )

[node name="Sprite" type="AnimatedSprite" parent="."]
material = ExtResource( 14 )
position = Vector2( -1.22772, 4.91098 )
frames = SubResource( 2 )
animation = "idle"

[node name="invi" type="Timer" parent="."]
wait_time = 0.5

[node name="Label" type="Label" parent="."]
margin_left = -302.818
margin_top = -509.284
margin_right = -27.8184
margin_bottom = -380.284
rect_scale = Vector2( 1.90706, 1.90706 )
custom_fonts/font = ExtResource( 105 )
text = "10010"
script = ExtResource( 106 )

[node name="reload" type="Timer" parent="."]
wait_time = 8.0
[connection signal="animation_finished" from="swing/AnimatedSprite" to="swing" method="_on_AnimatedSprite_animation_finished"]
[connection signal="body_entered" from="swing/AnimatedSprite/Area2D" to="." method="_on_enmiCol_body_entered"]
[connection signal="timeout" from="invi" to="." method="_on_invi_timeout"]
[connection signal="timeout" from="reload" to="." method="_on_reload_timeout"]
